WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308311
[GStreamer][MediaStream] setSinkId breaks WEBKIT_GST_ENABLE_AUDIO_MIXER=1
https://bugs.webkit.org/show_bug.cgi?id=308311
Summary
[GStreamer][MediaStream] setSinkId breaks WEBKIT_GST_ENABLE_AUDIO_MIXER=1
Xabier Rodríguez Calvar
Reported
2026-02-20 08:43:45 PST
Setting the sink id overrides the default sink so it will always create a new audio stream. We'd need to maybe make different mixer pipelines depending on the sink id.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2026-02-25 08:24:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59423
EWS
Comment 2
2026-03-03 03:32:10 PST
Committed
308537@main
(b1791af759fa): <
https://commits.webkit.org/308537@main
> Reviewed commits have been landed. Closing PR #59423 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-03 03:33:12 PST
<
rdar://problem/171610160
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug